[FIX] Fixed the background not covering the whole page lol

--- a/main.css
+++ b/main.css
@@ -1,3 +1,28 @@
+.ui.secondary.pointing.menu {
+    margin: 0;
+}
+
+.background-container {
+    background-image: url('https://www.toptal.com/designers/subtlepatterns/patterns/stripes-light.png');
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.ui.container {
+    padding-top: 30px;
+    padding-bottom: 60px;
+}
+
+.ui.container.button-holder {
+    padding-bottom: 0;
+}
+
+.text-content {
+    background-color: rgba(255,255,255,0.7);
+    padding: 50px;
+    border-radius: 50px;
+}
+
 .flex-container {
     display: flex;
     flex-wrap: wrap;
@@ -7,7 +32,7 @@
 
 .frame {
     background-repeat: no-repeat;
-    border: 20px solid white;
+    /* border: 8px solid white; */
     box-sizing: border-box;
     border-radius: 25px;
     margin: 25px;
